<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerActivity.CusMenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imgtaxi">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/imgtaxi"
            android:background="@drawable/menubkg">

            <androidx.cardview.widget.CardView
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="expandaboutus"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:id="@+id/Laboutus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/baseline_info_24"
                        android:drawablePadding="8dp"
                        android:text="About Us"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/aboutus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="10"
                        android:scrollbars="vertical"
                        android:elevation="1dp"
                        android:text="@string/Aboutus"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="expandcontact"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp"
                tools:ignore="OnClick">

                <LinearLayout
                    android:id="@+id/Lcontact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/baseline_contacts_support_24"
                        android:drawablePadding="8dp"
                        android:text="Contact Us"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="10"
                        android:scrollbars="vertical"
                        android:text="@string/Contact"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/second"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="expandprivacy"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp"
                tools:ignore="OnClick">

                <LinearLayout
                    android:id="@+id/Lprivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/baseline_policy_24"
                        android:drawablePadding="8dp"
                        android:text="Privacy Policies"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="10"
                        android:scrollbars="vertical"
                        android:text="@string/Privacy"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/third"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="expandlicense"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp"
                tools:ignore="OnClick">

                <LinearLayout
                    android:id="@+id/LLicense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/baseline_license"
                        android:drawablePadding="8dp"
                        android:text="License"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/license"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="10"
                        android:scrollbars="vertical"
                        android:text="@string/License"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/fifth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fourth"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="expandfaq"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp"
                tools:ignore="OnClick">

                <LinearLayout
                    android:id="@+id/LFAQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/baseline_question_answer_24"
                        android:drawablePadding="8dp"
                        android:text="FAQ"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/faq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="10"
                        android:scrollbars="vertical"
                        android:text="@string/FAQ"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fifth"
                android:layout_marginLeft="25sp"
                android:text="App Version- 1.0 "
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgtaxi"
        android:layout_above="@+id/bottom_navigation"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200sp"
            android:background="@color/white"
            android:layout_marginBottom="0dp"
            android:src="@drawable/taxi" />
    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/gray"
        app:menu="@menu/drawer_menu" />

</RelativeLayout>